--- a/Kubernetes/deployment-tripviewer.yaml
+++ b/Kubernetes/deployment-tripviewer.yaml
@@ -1,33 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: userprofile
+  name: tripviewer
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: userprofile
+      app: tripviewer
   template:
     metadata:
       labels:
-        app: userprofile
+        app: tripviewer
     spec:
       nodeSelector:
         "beta.kubernetes.io/os": linux
       containers:
-      - name: userprofile
-        image: registrydgr7315.azurecr.io/tripinsights/userprofile:1.0
+      - name: tripviewer
+        image: registrydgr7315.azurecr.io/tripinsights/tripviewer:1.0
         env:
-        - name: ALLOW_EMPTY_PASSWORD
-          value: "yes"
-        - name: SQL_USER
-          value: "sqladmindGr7315"
-        - name: SQL_PASSWORD
-          value: "fW0ou6Jh6"
-        - name: SQL_SERVER
-          value: "sqlserverdgr7315.database.windows.net"
-        - name: SQL_DBNAME
-          value: "mydrivingDB"
+        - name: USERPROFILE_API_ENDPOINT
+          value: "http://userprofile:80"
+        - name: TRIPS_API_ENDPOINT
+          value: "http://trips:80"
+        - name: BING_MAPS_KEY
+          value: ""
         resources:
           requests:
             cpu: 100m
@@ -37,49 +33,7 @@ spec:
             memory: 256Mi
         ports:
         - containerPort: 80
-          name: userprofile
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: userprofile
-spec:
-  ports:
-  - port: 80
-  selector:
-    app: userprofile
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: azure-vote-front
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: azure-vote-front
-  template:
-    metadata:
-      labels:
-        app: azure-vote-front
-    spec:
-      nodeSelector:
-        "beta.kubernetes.io/os": linux
-      containers:
-      - name: azure-vote-front
-        image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 250m
-            memory: 256Mi
-        ports:
-        - containerPort: 80
-        env:
-        - name: REDIS
-          value: "azure-vote-back"
+          name: tripviewer
 ---
 apiVersion: v1
 kind: Service
