--- a/Kubernetes/deployment-poi.yaml
+++ b/Kubernetes/deployment-poi.yaml
@@ -19,9 +19,9 @@ spec:
         image: registrydgr7315.azurecr.io/tripinsights/poi:1.0
         env:
         - name: SQL_USER
-          value: "sqladmindGr7315"
+          value: "sqladjhgjhgmindGr7315"
         - name: SQL_PASSWORD
-          value: "fW0ou6Jh6"
+          value: "fW0jhgjhgjhgou6Jh6"
         - name: SQL_SERVER
           value: "sqlserverdgr7315.database.windows.net"
         - name: SQL_DBNAME
