--- a/Kubernetes/deployment-user-java.yaml
+++ b/Kubernetes/deployment-user-java.yaml
@@ -19,9 +19,9 @@ spec:
         image: registrydgr7315.azurecr.io/tripinsights/user-java:1.0
         env:
         - name: SQL_USER
-          value: "sqladmindGr7315"
+          value: "sqladmghjgjhgindGr7315"
         - name: SQL_PASSWORD
-          value: "fW0ou6Jh6"
+          value: "fW0oghjghjgu6Jh6"
         - name: SQL_SERVER
           value: "sqlserverdgr7315.database.windows.net"
         - name: SQL_DBNAME
